# Swarm-Intelligence-Engine-with-Gated-Execution

./: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  demo.bat  docker-compose.yml  siege.toml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  repl.rs
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  hooks.ts
apps/web/src/components/: Drawer.tsx  Inspector.tsx  Layout.tsx  Rail.tsx  TopBar.tsx
apps/web/src/panels/: BranchMainline.tsx  Certification.tsx  Conflicts.tsx  Dashboard.tsx  Graph.tsx  LoopHistory.tsx  ObjectiveChat.tsx  Plan.tsx  Reviews.tsx  Settings.tsx  Skills.tsx  Tasks.tsx
apps/web/src/stores/: ui.ts
apps/web/src/types/: api.ts  generated.ts
db/migrations/: 0001_initial.sql  0002_m1_complete.sql  0003_m2_planning_schemas.sql  0004_m3_worker_governance.sql  0005_m4_projections.sql  0006_m5_certification_conflict.sql  0007_m6_observability_deployment.sql  0008_m7_recursive_improvement.sql  0009_m8_formal_readiness.sql  0010_peer_messaging.sql  0011_seal_review_artifacts.sql  0012_bnd010_idempotency_registry.sql  0012_enum_check_constraints.sql  0013_plan_gate_scoring.sql  0014_fcg_runtime_strengthening.sql  0015_cnf_rev_strengthen.sql  0016_skill_versioning.sql  0017_rms_spn_dep_scl.sql  0018_enum_check_constraints.sql  0019_align_check_constraints.sql  0020_bundle03_check_constraint_fixes.sql  0021_add_cascade_deletes.sql
docs/: ADAPTERS_AND_EXECUTION.md  ARCHITECTURE.md  CONCEPTS.md  DASHBOARD_API_AND_CLI.md  DEPLOYMENT_AND_SCALING.md  FORMAL_ASSURANCE.md  GATED_EXECUTION_AND_PLANNING.md  GOVERNANCE.md  ORIGINS.md  README.md  STATUS.md
scripts/: check-api-coverage.sh  check-enum-parity.sh  demo.sh  generate_drift_reports.sh  sync-types.sh  validate_migrations.sh
services/loop-runner/: Cargo.toml
services/loop-runner/src/: lib.rs  main.rs  planning.rs  projections.rs  recursive_improvement.rs  tick.rs
services/loop-runner/tests/: test_tick.rs
services/orchestration-api/: Cargo.toml
services/orchestration-api/src/: error.rs  lib.rs  main.rs  state.rs
services/orchestration-api/src/routes/: certification.rs  chat.rs  conflicts.rs  cycles.rs  deployment.rs  event_projections.rs  events.rs  loops.rs  metrics.rs  mod.rs  nodes.rs  objectives.rs  peer.rs  policies.rs  projections.rs  reviews.rs  roadmap.rs  skills.rs  stream.rs  task_lifecycle.rs  tasks.rs
services/orchestration-api/static/: index.html
services/orchestration-api/static/assets/: index-BZmqrgj6.js  index-nqmuny6q.css
services/worker-dispatch/: Cargo.toml
services/worker-dispatch/src/: main.rs
services/worker-dispatch/tests/: test_dispatch.rs
skills/conversation-to-plan-ingestion/: SKILL.md
skills/spec-locked-implementation/: SKILL.md
