[workspace]
members = [
  "packages/state-model",
  "packages/user-policy",
  "packages/worker-protocol",
  "packages/roadmap-model",
  "packages/skill-registry",
  "packages/robustness-policy",
  "packages/conversation-engine",
  "packages/planning-engine",
  "packages/agent-adapters",
  "packages/control-plane",
  "packages/ui-models",
  "packages/git-control",
  "packages/integration",
  "packages/conflict-system",
  "packages/review-governance",
  "packages/recursive-improvement",
  "packages/observability",
  "packages/deployment",
  "packages/formal-readiness",
  "packages/scaling",
  "services/orchestration-api",
  "services/loop-runner",
  "services/worker-dispatch",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Proprietary"
version = "0.1.0"
authors = ["madab"]

[workspace.dependencies]
axum = { version = "0.8", default-features = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
async-trait = "0.1"
thiserror = "2"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-stream = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
