[workspace]

[package]
name = "development-swarm-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
axum = "0.8"
open = "5"
orchestration-api = { path = "../../../services/orchestration-api" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
